# boilerplate

./: README.md
c/: CMakeLists.txt
c/program/: foo.c  foo.h  foo.test.c  main.c
c/program/component/: component.c
c/tests/: main.c
c/tests/component/: component.c
cpp/: CMakeLists.txt
cpp/program/: foo.cpp  foo.test.cpp  main.cpp
cpp/program/component/: component.cpp  component.hpp
